Use a default brush tip if the brush tip cannot be found

BUG:440561