libs/brush/kis_brush.cpp
@@ -385,6 +385,10 @@ KisBrushSP KisBrush::fromXML(const QDomElement& element, KisResourcesInterfaceSP
     if (brush && element.attribute("BrushVersion", "1") == "1") {
         brush->setScale(brush->scale() * 2.0);
     }
+    if (!brush) {
+        QDomElement el;
+        brush = KisBrushRegistry::instance()->get("auto_brush")->createBrush(el, resourcesInterface);
+    }
     return brush;
 }
 
